<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:stretchColumns="1">

            <TextView
                android:id="@+id/form_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4F4CAF50"
                android:elegantTextHeight="false"
                android:fontFamily="sans-serif"
                android:freezesText="true"
                android:includeFontPadding="true"
                android:padding="10dp"
                android:text="@string/form_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="120dp"
                    android:padding="10dp"
                    android:text="@string/cod" />

                <EditText
                    android:id="@+id/edtvlr1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/codEt"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="120dp"
                    android:padding="10dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/edtvlr2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/nameEt"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="120dp"
                    android:padding="10dp"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edtvlr3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/addressEt"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="120dp"
                    android:padding="10dp"
                    android:text="@string/phone" />

                <EditText
                    android:id="@+id/edtvlr4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:gravity="start"
                    android:hint="@string/phoneEt"
                    android:inputType="number" />
            </TableRow>


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="#4F4CAF50"
                android:contentDescription="@string/first"
                app:srcCompat="@android:drawable/ic_media_rew" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/ant"
                android:backgroundTint="#4F4CAF50"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/prox"
                android:backgroundTint="#4F4CAF50"
                app:srcCompat="@android:drawable/ic_media_next" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/last"
                android:backgroundTint="#4F4CAF50"
                app:srcCompat="@android:drawable/ic_media_ff" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>