<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="18dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="#4F4CAF50"
            android:text="@string/consulta"
            android:textAlignment="center"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="496dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:backgroundTint="#4F4CAF50"
                android:contentDescription="@string/first"
                app:srcCompat="@android:drawable/ic_media_rew" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/ant"
                android:backgroundTint="#4F4CAF50"
                app:srcCompat="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/prox"
                android:backgroundTint="#4F4CAF50"
                app:srcCompat="@android:drawable/ic_media_next" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/last"
                android:backgroundTint="#4F4CAF50"
                app:srcCompat="@android:drawable/ic_media_ff" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>